<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_label"
        android:id="@+id/save_recipe_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="38dp"
        android:background="@drawable/button_gradient"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_button_label"
        android:id="@+id/cancel_recipe_button"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/textView_label"
        android:layout_marginEnd="45dp"
        android:background="@drawable/button_gradient"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/input_area"
        android:layout_below="@+id/textView_label"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:enabled="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/backwithborder"
        android:hint="@string/editText_hint"
        android:gravity="top"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="15dp"
        android:textColor="#ffffff"
        android:inputType="textCapSentences|textMultiLine"
        android:scrollHorizontally="false"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/editText_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom = "10dp"
        android:id="@+id/textView_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:enabled="false"
        android:textColor="#ffffff"
        android:singleLine="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_recipe_button"
        android:id="@+id/speak_button"
        android:layout_marginLeft = "10dp"
        android:layout_marginRight = "10dp"
        android:layout_marginTop = "10dp"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        android:background="@drawable/button_gradient"
        android:layout_below="@+id/input_area"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/readNext_label"
        android:id="@+id/next_button"
        android:layout_alignTop="@+id/speak_button"
        android:layout_toEndOf="@+id/speak_button"
        android:background="@drawable/button_gradient"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/readPrev_label"
        android:id="@+id/prev_button"
        android:layout_alignTop="@+id/speak_button"
        android:layout_toStartOf="@+id/speak_button"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_gradient"/>

</RelativeLayout>
