<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:clickable="true">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_of_recipe_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/textLabelColor"
        android:layout_marginBottom = "20dp"
        android:gravity="center_horizontal"
        android:id="@+id/textView_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:enabled="false"
        android:singleLine="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/filename_textarea"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/textView_label"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_save_recipe_button"
        android:id="@+id/save_recipe_button"
        android:background="@drawable/savebuttoncolor"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignTop="@+id/load_recipe_button"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loadButton_text"
        android:id="@+id/load_recipe_button"
        android:background="@drawable/savebuttoncolor"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@+id/filename_textarea"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="350dp"
        android:id="@+id/list_recipes"
        android:gravity="top|center"
        android:layout_below="@+id/save_recipe_button"
        android:background="@drawable/backwithborder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="174dp"
        android:text="@string/availableRecipes_hint" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/loadRecipe_hint"
        android:enabled="false"
        android:id="@+id/loadRecipe_hint"
        android:layout_centerVertical="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteButton_text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/delete_button"
        android:background="@drawable/savebuttoncolor"
        android:layout_above="@+id/list_recipes"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
